objects/Contact.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>utm1__c</fullName>
        <label>utm1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm2__c</fullName>
        <label>utm2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LWC_money__c</fullName>
        <label>LWC money</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PM contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RVDB_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RVDB check</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(AccountId))   &amp;&amp;  ( MailingPostalCode   &lt;&gt; Account.ShippingPostalCode )</errorConditionFormula>
        <errorMessage>Contact_must_be_in_Account_ZIP_Code</errorMessage>
    </validationRules>
</CustomObject>